Migrate example command/event hierarchies to Java 21 records
The essentials-spring-examples modules compile at release 21 but still
modelled commands and events as abstract base classes with public final
fields and hand-written equals/hashCode/toString. Adopt the shape already
used by TaskCommand/TaskEvent in postgresql-cqrs: a plain interface
exposing the identity accessor, implemented by records.

Converted across all three modules:
  - AccountEvent, IntraBankMoneyTransferEvent, ShippingEvent,
    OrderEvent, ExternalOrderShippingEvent + their concrete events
  - RequestIntraBankMoneyTransfer, RegisterShippingOrder, ShipOrder
  - ShippingDestinationAddress (builder retained)
  - the test-local commands/events in EventProcessorIT

Two deliberate exceptions:

ShippingDestinationAddress stays a class in postgresql-inbox-outbox --
it is @Embedded in a JPA @Entity with a setter, so it needs a no-arg
constructor and mutable fields.

IntraBankMoneyTransferCompleted keeps status as a record component even
though it is always COMPLETED, so the persisted JSON is unchanged.
Construction goes through a static of(transactionId) rather than a
shorter constructor, which is what would invite Jackson 3 to select the
wrong creator.

The explicit @JsonCreator(mode = PROPERTIES) workarounds on
ExternalOrderShipped are dropped: a record's canonical constructor is
always a properties-based creator, so the single-argument delegating-
creator trap does not apply. Verified rather than assumed -- OrderShipped
and ExternalOrderShipped are now single-component records that round-trip
through the event store and Kafka, and those ITs pass.

Also: instanceof + cast to a type pattern in AccountsIT,
collect(Collectors.toList()) to toList() in DurableQueuesLoadIT.

Fix a coverage hole in ComparableTupleTest: test_ComparableTriple used
Tuple.of for its arity() and toList() assertions while all 29 others use
ComparableTuple.of, so ComparableTriple.arity() and toList() were never
exercised.

Verified